# tech_comp

./: .gitignore  .replit  README.md  data_analyzer.py  data_fetcher.py  document_generator.py  main.py  pyproject.toml  replit.md
attached_assets/: Pasted-Title-Build-Autonomous-Backend-for-Country-Tech-Domain-Comparative-Intelligence-Instruction-Bu-1761078027824_1761078027825.txt
tech_comp_final/backend/: .env.example  requirements.txt
tech_comp_final/backend/app/: config.py  db.py  main.py
tech_comp_final/backend/app/data/: tracker.db  wassenaar_index.json  wassenaar_parsed.json
tech_comp_final/backend/app/services/: arxiv_fetcher.py  aspi_data_fetcher.py  chronological_tracker.py  dual_use_analyzer.py  enhanced_analyzer_v2.py  enhanced_data_analyzer.py  enhanced_data_fetcher.py  enhanced_document_generator.py  fast_verifier.py  news_classifier.py  news_fetcher.py  semantic_scholar_fetcher.py  tim_data_fetcher.py  wassenaar_curation.py  wassenaar_parser.py
tech_comp_final/frontend/: package-lock.json
tech_comp_final/frontend/src/: App.jsx
tech_comp_final/frontend/src/styles/: global.css
